# genuml

./: .gitignore  Dev.md  README.md  genuml.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: test.yml
genuml/: __init__.py  genuml.py
tests/: __init__.py  test_cli.py  test_genuml.py  test_parsing.py
tests/data/: ExampleAbstract.java  ExampleClass.java  ExampleEnum.java  ExampleInterface.java  diagram.puml
