[tool.poetry]
name = "genuml"
version = "0.5.0"
description = ""
authors = ["Simon Muller <samullers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "~0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
