[tool.poetry]
name = "genuml"
version = "0.6.1"
description = "Generate PlantUML diagram code from Java class files"
authors = ["Simon Muller <samullers@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/samuller/genuml"
repository = "https://github.com/samuller/genuml"
keywords = ["plantuml", "uml", "java"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Documentation",
    "Topic :: Multimedia :: Graphics :: Editors",
]


[tool.poetry.scripts]
genuml = "genuml.genuml:app"

[tool.poetry.dependencies]
python = "^3.8.1"
typer = "~0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^3.0.0"
flake8 = "6.1.0"
mypy = "1.6.1"
flake8-docstrings = "^1.6.0"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.mypy]
files = "genuml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
